--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+        <color name="colorPrimary">#FF6200EE</color> <!-- Vibrant primary color -->
+        <color name="light_background">#F5F5F5</color> <!-- Light background color -->
+
+
 </resources>
